# audit_log/openapi.yml
@@ -78,6 +78,16 @@ paths:
                     type: string
         '404':
           description: Not Found
+  /health:
+    get:
+      summary: Get service status
+      operationId: app.get_health_check
+      description: Returns the services status
+      responses:
+        '200':
+          description: Service is Running
+        '400':
+          description: Service encountered a problem
       
 components:
   schemas:
